[gd_scene load_steps=10 format=3 uid="uid://cw0qdm54y22i"]

[ext_resource type="Script" path="res://Source/TalkScene.gd" id="1_e3ic5"]
[ext_resource type="Texture2D" uid="uid://di0giiuqv4gaq" path="res://Assets/UI/dialogues.png" id="2_2g5yk"]
[ext_resource type="FontFile" uid="uid://cibh2hon2txu4" path="res://Assets/Technical/Perun.ttf" id="3_0bwh1"]
[ext_resource type="Texture2D" uid="uid://dn152coomiitc" path="res://Assets/UI/Cross.png" id="3_rrq1a"]
[ext_resource type="Shader" path="res://Source/TalkScene.gdshader" id="3_tonjl"]
[ext_resource type="Texture2D" uid="uid://bsvhrdsuo8bj8" path="res://Assets/UI/arrow.png" id="4_q1n0i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d1st0"]
shader = ExtResource("3_tonjl")
shader_parameter/progress = 1.0
shader_parameter/diamondPixelSize = 10.0

[sub_resource type="Gradient" id="Gradient_y4y1o"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 0.20956, 0.186606, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dsxmf"]
gradient = SubResource("Gradient_y4y1o")
width = 32
height = 32

[node name="TalkScene" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.674816, 0.674814, 0.674815, 0.517647)
script = ExtResource("1_e3ic5")
metadata/_edit_use_anchors_ = true

[node name="BG" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2g5yk")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.337
anchor_right = 0.5
anchor_bottom = 0.337
offset_left = -175.0
offset_top = -114.8
offset_right = 175.0
offset_bottom = 135.2
alignment = 1

[node name="TextLabel" type="RichTextLabel" parent="BG/VBoxContainer"]
material = SubResource("ShaderMaterial_d1st0")
clip_contents = false
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/default_color = Color(1, 0.923, 0.58, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("3_0bwh1")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="TranslateButton" type="Button" parent="BG/VBoxContainer/TextLabel"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CloseButton" type="TextureButton" parent="BG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.91
anchor_top = 0.08
anchor_right = 0.91
anchor_bottom = 0.08
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = SubResource("GradientTexture2D_dsxmf")
metadata/_edit_use_anchors_ = true

[node name="CrossTexture" type="TextureRect" parent="BG/CloseButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rrq1a")
expand_mode = 1

[node name="NextButton" type="TextureButton" parent="BG"]
modulate = Color(0.41, 0.198167, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.765
anchor_top = 0.7925
anchor_right = 0.765
anchor_bottom = 0.7925
offset_left = -47.0
offset_top = -47.0
offset_right = 47.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_q1n0i")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="PrevButton" type="TextureButton" parent="BG"]
visible = false
modulate = Color(0.41, 0.198167, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.242
anchor_top = 0.7925
anchor_right = 0.242
anchor_bottom = 0.7925
offset_left = -46.8
offset_top = -47.0
offset_right = 47.2
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_q1n0i")
ignore_texture_size = true
stretch_mode = 0
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="ShaderTimer" type="Timer" parent="."]
one_shot = true

[node name="LangTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="BG/VBoxContainer/TextLabel/TranslateButton" to="." method="_on_translate_button_pressed"]
[connection signal="pressed" from="BG/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="BG/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="BG/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="timeout" from="ShaderTimer" to="." method="_on_shader_timer_timeout"]
[connection signal="timeout" from="LangTimer" to="." method="_on_lang_timer_timeout"]
